--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".AddSubCategoryActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".AddSubCategoryActivity" />
+        <activity android:name=".EditProductActivity"></activity>
     </application>
 
 </manifest>
