--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".AddSubCategoryActivity" />
-        <activity android:name=".EditProductActivity"></activity>
+        <activity android:name=".EditProductActivity" />
+        <activity android:name=".CouponActivity"></activity>
     </application>
 
 </manifest>
