--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".AddSubCategoryActivity" />
         <activity android:name=".EditProductActivity" />
-        <activity android:name=".CouponActivity"></activity>
+        <activity android:name=".CouponActivity" />
+        <activity android:name=".UpdateCouponActivity"></activity>
     </application>
 
 </manifest>
